Corrected bug : link visited not bold on IE
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2849 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/yui/menu/assets/menu.css
+++ b/war-core/src/main/webapp/util/yui/menu/assets/menu.css
@@ -395,7 +395,7 @@ when one of its submenus is visible.
 .yuimenubaritemlabel,
 .yuimenubaritemlabel:visited {
 
-    font-size: 10px;
+    font-size: 11px;
     color: #000;
     text-decoration: none;
 
